--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@genoacms/adapter-node",
-  "version": "0.8.3",
+  "version": "0.8.3.test-1",
   "type": "module",
   "description": "Deployment adapter for nodejs",
   "main": "src/index.js",
