--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@genoacms/adapter-node",
-  "version": "0.8.3-test.2",
+  "version": "0.8.9",
   "type": "module",
   "description": "Deployment adapter for nodejs",
   "main": "src/index.js",
@@ -13,11 +13,8 @@
     "email": "filip.holcik.official@gmail.com"
   },
   "license": "ISC",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "dependencies": {
-    "@genoacms/cloudabstraction": "^0.8.3",
+    "@genoacms/cloudabstraction": "^0.8.9",
     "@sveltejs/adapter-node": "^5.2.12"
   }
 }
